[package]
name = "ckb-connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-types = "0.110.1"
ckb-stop-handler = "0.110.1"
tokio = { version = "1", features = ["full"] }
p2p = { version="0.4.2", package="tentacle", features = ["upnp"] }
crossbeam = "0.8.1"
futures = { version = "0.3" }
snap = "1"
tokio-util = { version = "0.7", features = ["codec"] }
log = "0.4"
socket2 = "0.5"
