[package]
name = "p2p-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# ckb-testkit = { git = "https://github.com/nervosnetwork/ckb-integration-test", tag = "v0.0.7", features = ["with_subscribe"] }
ckb-testkit = { git = "https://github.com/nervosnetwork/ckb-integration-test", tag = "v0.0.7" }
clap = { version = "4.3.22", features = ["cargo"] }
ckb-logger-config = "0.110.0"
ckb-logger-service = "0.110.0"
log = "0.4.20"
p2p = { version="0.4.0-alpha.2", package="tentacle", features = ["upnp", "parking_lot"] }
serde = "1.0.183"
thiserror = "1.0.47"
anyhow = "1.0.75"

