[package]
name = "p2p-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.3.22", features = ["cargo", "derive"] }
ckb-connector = { path = "../connector" }
ckb-types = "0.110.1"
ckb-logger-config = "0.110.1"
ckb-logger-service = "0.110.1"
log = "0.4.20"
p2p = { path = "../tentacle/tentacle", package  = "tentacle", features = ["upnp"] }
tokio-util = { version = "0.7", features = ["codec"] }
thiserror = "1.0.47"
serde = "1.0.183"
libp2p = { version = "0.52.4", features = ["full"] }
futures = "0.3.29"
futures_ringbuf = "0.4.0"
