[package]
name = "p2p-pipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
env_logger = "0.10.0"
futures = "0.3.28"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.52.3", features = ["tokio", "dns", "rsa", "identify", "kad", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic"] }
tokio-util = { version = "0.7.8", features = ["full"] }
log = "0.4.20"
hex = "0.4.3"
